Add Virtual Threads and Structured Concurrency code samples and blog post
Co-authored-by: sps23 <58396310+sps23@users.noreply.github.com>